<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Cine Ticket</string>
    <string name="movie_title">Homem Aranha sem volta para casa</string>
    <string name="run_time">Duração: </string>
    <string name="genre">Gênero: </string>
    <string name="movie_genre">Ação</string>
    <string name="rate_description">Icone de classificação do filme</string>
    <string name="movie_age">Classificação: </string>
    <string name="btn_buy_ticket">Comprar Ingresso</string>
    <string name="btn_story_line_movie">Sinopse</string>
    <string name="schedules">Horários: </string>
    <string name="audio">Áudio: </string>
    <string name="movie_audio_hint">Dublado, Legendado</string>
    <string name="banner_description">Imagem do banner do filme</string>
    <string name="choose_date">Escolha uma data</string>
    <string name="text_room">Sala</string>
    <string name="text_number_room">06</string>
    <string name="text_room_audio">Dublado</string>
    <string name="movies">Em cartaz</string>
    <string name="coming_soon">Vem aí</string>
    <string name="my_tickets">Meus ingressos</string>
    <string name="back_button_description">Botão para voltar a tela anterior</string>
    <string name="txt_separator">"  |  "</string>
    <string name="poster_description">Imagem do poster do filme</string>
    <string name="read_more">Leia mais</string>
    <string name="movie_synopsis" tools:ignore="TypographyEllipsis">O herói amigo da vizinhança é desmascarado e não consegue mais separar sua vida normal ...</string>
    <string name="age">12</string>
    <string name="release_date">Estreia:</string>
    <string name="movie_release_date">13/01/2022</string>
    <string name="txt_weekday">Qui</string>
    <string name="txt_date">6</string>
    <string name="rectangle_description">Caixa em formato de retângulo</string>
    <string name="txt_schedule">17:40</string>
    <string name="close_screen_description">Botão para fechar a tela atual</string>
    <string name="txt_room_choose_seat">Sala:</string>
    <string name="txt_selected_seats">Assentos selecionados:</string>
    <string name="txt_separator_choose_seat">-</string>
    <string name="txt_movie_full_date">30/01/2022</string>
    <string name="txt_choose_your_seat">Escolha seu assento:</string>
    <string name="txt_subtitle">Legenda</string>
    <string name="txt_available">Disponível</string>
    <string name="txt_no_available">Reservado</string>
    <string name="txt_selected">Selecionado</string>
    <string name="txt_button_continue">Continuar</string>
    <string name="txt_screen">TELA</string>
    <string name="txt_row">A</string>
    <string name="txt_see_all">Ver todos</string>
    <string name="txt_seat">Assentos:</string>
    <string name="txt_select_ticket_type">Selecione o tipo de assento:</string>
    <string name="txt_selected_seat_counter">1/1</string>
    <string name="txt_entire">Inteira</string>
    <string name="txt_entire_value">R$ 24,00</string>
    <string name="description_counter_rectangle">Retângulo usuado para delimitar o contador</string>
    <string name="txt_minus">-</string>
    <string name="txt_counter_value">0</string>
    <string name="txt_plus">+</string>
    <string name="txt_half">Meia</string>
    <string name="txt_half_value">R$ 12,00</string>
    <string name="txt_confirm">Confirmar</string>
    <string name="txt_toast_select_seat_type">Selecione o tipo de assento</string>
    <string name="ticket_reserved">Ingresso reservado</string>
    <string name="txt_entire_ticket">Inteira:</string>
    <string name="txt_half_ticket">Meia:</string>
</resources>