<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.TicketDetails">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back_button_description"
        android:src="@drawable/ic_arrow_back"
        android:tint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="170dp"
        android:layout_height="220dp"
        android:contentDescription="@string/poster_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lexenddeca_medium"
        android:gravity="center"
        android:text="@string/movie_title"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_poster" />

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_title">

        <TextView
            android:id="@+id/room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lexenddeca_light"
            android:text="@string/txt_room_choose_seat"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="@id/movie_title"
            app:layout_constraintTop_toBottomOf="@+id/movie_title" />

        <TextView
            android:id="@+id/movie_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:fontFamily="@font/lexenddeca_light"
            android:text="@string/text_number_room"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/room"
            app:layout_constraintTop_toTopOf="@+id/room" />

        <TextView
            android:id="@+id/separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/lexenddeca_light"
            android:text="@string/txt_separator_choose_seat"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/movie_room"
            app:layout_constraintTop_toTopOf="@+id/movie_room" />

        <TextView
            android:id="@+id/movie_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/lexenddeca_light"
            android:text="@string/txt_movie_full_date"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/separator"
            app:layout_constraintTop_toTopOf="@+id/separator" />

        <TextView
            android:id="@+id/separator2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/lexenddeca_light"
            android:text="@string/txt_separator_choose_seat"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/movie_date"
            app:layout_constraintTop_toTopOf="@+id/movie_date" />

        <TextView
            android:id="@+id/movie_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/lexenddeca_light"
            android:text="@string/txt_schedule"
            android:textColor="@color/black"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@+id/separator2"
            app:layout_constraintTop_toTopOf="@+id/separator2" />
    </LinearLayout>

    <TextView
        android:id="@+id/txt_seat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/lexenddeca_medium"
        android:text="@string/txt_seat"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/linear"
        app:layout_constraintStart_toStartOf="@id/linear"
        app:layout_constraintTop_toBottomOf="@id/linear" />

    <TextView
        android:id="@+id/movie_seats"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/lexenddeca_light"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@id/linear"
        app:layout_constraintStart_toStartOf="@id/linear"
        app:layout_constraintTop_toBottomOf="@id/txt_seat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_seats">

        <TextView
            android:id="@+id/txt_entire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lexenddeca_light"
            android:text="@string/txt_entire_ticket"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/count_entire"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/lexenddeca_light"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_half"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/lexenddeca_light"
            android:text="@string/txt_half_ticket"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/count_half"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/lexenddeca_light"
            android:textColor="@color/black"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>