<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/movie_banner"
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:adjustViewBounds="true"
        android:scaleType="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/movie_poster"
        android:layout_width="130dp"
        android:layout_height="190dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="-30dp"
        android:contentDescription="@string/banner_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/movie_banner" />

    <TextView
        android:id="@+id/movie_title"
        android:layout_width="215dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="50dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/movie_poster"
        app:layout_constraintTop_toBottomOf="@id/movie_banner"
        tools:text="@string/movie_title" />

    <TextView
        android:id="@+id/movie_rate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/run_time"
        app:layout_constraintLeft_toLeftOf="@+id/movie_title"
        app:layout_constraintTop_toBottomOf="@+id/movie_title"
        tools:text="4,5" />

    <ImageView
        android:id="@+id/ic_rate"
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:contentDescription="@string/rate_description"
        android:src="@drawable/ic_star_rate"
        app:layout_constraintBottom_toBottomOf="@id/movie_rate"
        app:layout_constraintLeft_toRightOf="@id/movie_rate"
        app:layout_constraintTop_toTopOf="@id/movie_rate" />

    <TextView
        android:id="@+id/movie_run_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="@+id/movie_title"
        app:layout_constraintTop_toBottomOf="@+id/movie_rate"
        tools:text="02h28" />

    <TextView
        android:id="@+id/separator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="  |  "
        app:layout_constraintLeft_toRightOf="@id/movie_run_time"
        app:layout_constraintTop_toTopOf="@id/movie_run_time" />

    <TextView
        android:id="@+id/movie_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/separator"
        app:layout_constraintTop_toTopOf="@id/separator"
        tools:text="@string/movie_genre" />

    <TextView
        android:id="@+id/txt_choose_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/choose_date"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/movie_poster"
        app:layout_constraintTop_toBottomOf="@+id/movie_poster" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/black"
        app:layout_constraintTop_toBottomOf="@id/txt_choose_date" />


</androidx.constraintlayout.widget.ConstraintLayout>